Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
 of your chosen password. at the 
 moment the following criteria 
 are in use to determine the 
-actual strength of your password:
-    *   length
-    *   characters? 
-        lower/upper case?
-    *   numbers
-    *   special characters?
-    *   repetitions of characters</p>
+actual strength of your password:</p>
 
-<hr><p>2014-06-17
+<ul>
+<li>length</li>
+<li>characters? </li>
+<li>lower/upper case?</li>
+<li>numbers</li>
+<li>special characters?</li>
+<li>repetitions of characters</li>
+</ul><hr><p>2014-06-17
 Dario Tilgner</p>
         </section>
 
